MDEV-4235: Galera: Assertion `0' fails in tdc_remove_table on creating a trigger

Analysis: There is two different THD's using the same table.

Fix: In galera brute force (BF) exclusive locks are cancelled. Thus other threads
could access the same table. Added additional check if this is the case, then we
should not assert here.